// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper Text Component should render a default helper text 1`] = `
<span
  class="HelperText__StyledHelperTextSpan-sc-4k037i-0 eONucR"
  data-testid="helper-text-component-test"
>
  Help text goes here
</span>
`;

exports[`Helper Text Component should render a error helper text 1`] = `
<span
  class="HelperText__StyledHelperTextSpan-sc-4k037i-0 eziIXz"
  data-testid="helper-text-component-test"
>
  Error text goes here
</span>
`;
